rhbz#868953 fdo#45084 When the caller specifies filter type, stick to it

and don't overwrite it.

(cherry picked from commit 552bebe6fa27fa58d07d87283a4b24e6052ab3d4)

Conflicts:

	filter/source/config/cache/typedetection.cxx

Change-Id: I35a3efc506bbcc33ea4c3d2466929f8227dae102
Signed-off-by: Eike Rathke <erack@redhat.com>